# INT2-Jipsa-Team04

./: .env.example  .gitignore  docker-compose.yml
.github/ISSUE_TEMPLATE/: Chore.md  Docs.md  Feature.md  Fix.md  Refactor.md  Test.md  Update.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
RAG/: .env.example  .gitignore  README.html  README.md  pyproject.toml
RAG/docs/: chunk-search-api.md
RAG/docs/api/: chunk-synchronization-contract.md  rag-answer-api-contract.md
RAG/infra/qdrant/: compose.yaml  cuda-entrypoint.sh
RAG/scripts/: start-local-rag.ps1  stop-local-rag.ps1
RAG/src/jipsa_rag/: __init__.py  main.py
RAG/src/jipsa_rag/api/: __init__.py  ingest.py  internal_auth.py
RAG/src/jipsa_rag/api/v1/: __init__.py  error_mapping.py  router.py
RAG/src/jipsa_rag/api/v1/endpoints/: __init__.py  chunk_search.py  file_processing.py  health.py  network_diagnostics.py  rag_answer.py  rag_answers.py
RAG/src/jipsa_rag/application/: __init__.py
RAG/src/jipsa_rag/core/: __init__.py  config.py  error_codes.py  exception_handlers.py  exceptions.py  generation_config.py  logging.py  middleware.py  network_config.py  request_context.py
RAG/src/jipsa_rag/domain/: __init__.py
RAG/src/jipsa_rag/infrastructure/: __init__.py
RAG/src/jipsa_rag/infrastructure/app_server/: __init__.py  ingest_client.py
RAG/src/jipsa_rag/infrastructure/chunking/: __init__.py  character.py  chunker.py  exceptions.py  models.py
RAG/src/jipsa_rag/infrastructure/database/: __init__.py  session.py
RAG/src/jipsa_rag/infrastructure/document/: __init__.py  exceptions.py  models.py  parser.py  parser_factory.py
RAG/src/jipsa_rag/infrastructure/document/parsers/: __init__.py  docx.py  pdf.py  pptx.py  txt.py  xlsx.py
RAG/src/jipsa_rag/infrastructure/embedding/: __init__.py  embedder.py  exceptions.py  models.py  query.py  tei.py
RAG/src/jipsa_rag/infrastructure/file/: __init__.py  downloader.py
RAG/src/jipsa_rag/infrastructure/generation/: __init__.py  claude.py  client.py  exceptions.py  models.py
RAG/src/jipsa_rag/infrastructure/indexing/: __init__.py  active_chunk_repository.py  chunk_snapshot_models.py  concurrent_repository.py  exceptions.py  file_lock.py  local_repository.py  models.py  ports.py  qdrant_search.py  qdrant_store.py
RAG/src/jipsa_rag/infrastructure/network/: __init__.py  diagnostics.py
RAG/src/jipsa_rag/schemas/: __init__.py  chunk_search.py  common.py  file_processing.py  health.py  ingestion.py  network_diagnostics.py  rag_answer.py  reference_files.py
RAG/src/jipsa_rag/services/: __init__.py  active_chunk_snapshot.py  chunk_search.py  file_indexing.py  prompt_builder.py  rag_answer.py
RAG/tests/: conftest.py
RAG/tests/integration/: test_chunk_search.py  test_database_connection.py  test_rag_answer_reference_contract.py  test_reference_file_scope.py
RAG/tests/unit/api/: test_health.py  test_ingest_chunk_synchronization.py  test_internal_auth.py
RAG/tests/unit/api/v1/endpoints/: test_chunk_search.py  test_file_processing.py  test_health.py  test_network_diagnostics.py  test_rag_answer.py  test_rag_answers.py
RAG/tests/unit/core/: test_config.py  test_exception_handlers.py  test_file_download_config.py  test_generation_config.py  test_network_config.py  test_sensitive_logging.py
RAG/tests/unit/infrastructure/app_server/: test_ingest_callback_security.py  test_ingest_client.py
RAG/tests/unit/infrastructure/chunking/: test_character.py  test_chunking_models.py
RAG/tests/unit/infrastructure/database/: test_session.py
RAG/tests/unit/infrastructure/document/: test_models.py  test_parser_factory.py  test_pdf.py
RAG/tests/unit/infrastructure/embedding/: test_query.py  test_tei.py
RAG/tests/unit/infrastructure/file/: test_downloader.py
RAG/tests/unit/infrastructure/generation/: test_claude.py  test_models.py
RAG/tests/unit/infrastructure/indexing/: test_active_chunk_repository.py  test_concurrent_repository.py  test_file_lock.py  test_local_repository.py  test_qdrant_search.py  test_qdrant_store.py
RAG/tests/unit/infrastructure/network/: test_diagnostics.py
RAG/tests/unit/schemas/: test_ingestion.py  test_rag_answer.py  test_reference_file_requests.py
RAG/tests/unit/services/: test_active_chunk_snapshot.py  test_chunk_search.py  test_file_indexing.py  test_file_indexing_concurrent_requests.py  test_file_indexing_lock.py  test_prompt_builder.py  test_rag_answer.py  test_rag_answer_request_scope.py
backend/: .dockerignore  .gitignore  Dockerfile  build.gradle
backend/src/main/java/com/jipsa/: BackendApplication.java
backend/src/main/java/com/jipsa/admin/: AdminAccessGuard.java  AdminActionConflictException.java  AdminController.java  AdminService.java  AdminUserListItem.java  AdminUserListResponse.java  AdminUserNotFoundException.java  AdminUserProjection.java  DeleteUserRequest.java  NoActiveSanctionException.java  SanctionItem.java  SanctionListResponse.java  SanctionStatus.java  SanctionType.java  SelfTargetNotAllowedException.java  SuccessResponse.java  SuspendUserRequest.java  UnsuspendUserRequest.java  UpdateRoleRequest.java  UserSanction.java  UserSanctionRepository.java
backend/src/main/java/com/jipsa/auth/: AuthController.java  (+14 more)
backend/src/main/resources/: application.yaml
backend/src/test/java/com/jipsa/: BackendApplicationTests.java  EntityMappingSmokeTest.java
backend/src/test/resources/: application.yaml
db/init/: Jipsa_AWS_Server_DB_v1.sql
embedding/: requirements.txt
embedding/app/: main.py
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: admin.ts  auth.ts  client.ts  files.ts  folders.ts  me.ts  organize.ts  uploads.ts  userSettings.ts
frontend/src/components/: AIChatView.tsx  AdminView.tsx  DashboardView.tsx  FileDetailPanel.tsx  LandingView.tsx  LoginView.tsx  MyDocumentsView.tsx  SettingsView.tsx
frontend/src/mocks/: mockData.ts
frontend/src/upload/: UploadProvider.tsx
frontend/src/utils/: folderTree.ts  formatBytes.ts  formatDateTime.ts  oauth.ts  retry.ts
(+202 files in other folders)
