[project]
name = "jipsa-rag"
version = "0.1.0"
description = "FastAPI-based document processing and RAG service for Jipsa."
readme = "README.md"
authors = [
    { name = "안수현", email = "soxyxs4996@gmail.com" }
]
requires-python = ">=3.12,<3.13"

dependencies = [
    # =========================================================
    # [Database]
    # - Local RAG MySQL 데이터베이스 비동기 연결
    # - MySQL caching_sha2_password 인증 처리
    # - SQLAlchemy ORM 및 Alembic 마이그레이션 관리
    # =========================================================
    "alembic>=1.18.5,<2.0",
    "asyncmy>=0.2,<1.0",
    "cryptography>=49.0.0,<50.0",
    "sqlalchemy[asyncio]>=2.0,<2.1",

    # =========================================================
    # [Web API]
    # - FastAPI 애플리케이션 구성
    # - Uvicorn ASGI 서버 실행
    # =========================================================
    "fastapi>=0.139.0,<1.0",
    "uvicorn[standard]>=0.35,<1.0",

    # =========================================================
    # [HTTP Client]
    # - 애플리케이션 서버와의 비동기 HTTP 통신
    # - 애플리케이션 서버가 발급한 Presigned GET URL을 통한 파일 다운로드
    # - Starlette/FastAPI 테스트에서 사용하는 내부 HTTP 클라이언트
    #
    # RAG 서버는 boto3와 AWS 자격 증명을 사용하여
    # S3에 직접 접근하지 않는다.
    # =========================================================
    "httpx2>=2.5.0,<3.0",

    # =========================================================
    # [LLM Generation]
    # - Anthropic Claude API 비동기 생성 클라이언트 구현
    # - SDK 요청·응답 타입과 예외를 인프라 계층 내부에 격리
    # - API Key는 소스 코드가 아닌 환경 변수로 주입
    #
    # Anthropic SDK는 0.x 버전에서 타입 또는 인터페이스 변경이
    # 발생할 수 있으므로 검증한 마이너 버전 범위로 제한한다.
    # =========================================================
    "anthropic>=0.118.0,<0.119.0",

    # =========================================================
    # [Document Parsing]
    # - PDF 텍스트 레이어와 페이지 단위 원본 위치 정보 추출
    # - 이미지 기반 PDF OCR은 수행하지 않음
    # =========================================================
    "pypdf>=6.14.2,<7.0",

    # =========================================================
    # [Configuration]
    # - 환경별 dotenv 파일 관리
    # - 타입 안전한 환경 변수 검증
    # - DB 비밀번호와 같은 비밀값의 로그 노출 방지
    # =========================================================
    "pydantic-settings>=2.14.2,<3.0",

    # =========================================================
    # [Logging]
    # - 운영 환경에서 사용할 구조화된 JSON 로그 출력
    # - Request ID 기반 서버 간 요청 추적
    # =========================================================
    "python-json-logger>=4.1.0,<5.0",

    # =========================================================
    # [Retry]
    # - 애플리케이션 서버 API의 일시적인 통신 실패 재시도
    # - Presigned GET URL 다운로드 중 발생하는 일시적인 오류 재시도
    #
    # 만료된 URL, 권한 오류 및 잘못된 요청과 같이
    # 재시도할 수 없는 오류에는 적용하지 않는다.
    # =========================================================
    "tenacity>=9.1.4,<10.0",

    # =========================================================
    # [Vector Database]
    # - 청크 임베딩 벡터 저장
    # - 사용자 및 활성 상태 기반 관련 청크 검색
    # - 로컬 메모리 모드를 이용한 검색 통합 테스트
    # =========================================================
    "qdrant-client>=1.18.0,<1.19.0",
]


# =============================================================
# 실행 명령
# =============================================================
# `uv run jipsa-rag` 명령을 실행하면
# jipsa_rag.main 모듈의 main() 함수를 호출한다.
#
# 기존의 `jipsa_rag:main`은 jipsa_rag/__init__.py에
# main 함수가 존재하지 않아 실행할 수 없으므로 사용하지 않는다.
[project.scripts]
jipsa-rag = "jipsa_rag.main:main"


# =============================================================
# Build System
# =============================================================
[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"


# =============================================================
# 개발 및 테스트 전용 의존성
# =============================================================
[dependency-groups]
dev = [
    # 정적 타입 검사
    "mypy>=2.2.0,<3.0",

    # 테스트 및 비동기 테스트
    "pytest>=9.1.1,<10.0",
    "pytest-asyncio>=1.4.0,<2.0",
    "pytest-cov>=7.1.0,<8.0",

    # 코드 포맷 및 린트
    "ruff>=0.15.21,<1.0",
]


# =============================================================
# Pytest
# =============================================================
[tool.pytest.ini_options]

# -ra:
# 테스트 종료 시 skip, xfail, fail 등의 추가 요약 정보를 출력한다.
#
# -q:
# 테스트 진행 로그를 간결하게 출력한다.
#
# --strict-config:
# 잘못되었거나 지원되지 않는 Pytest 설정이 존재하면 즉시 실패한다.
#
# --strict-markers:
# 등록되지 않은 pytest marker를 사용하면 즉시 실패한다.
#
# --import-mode=importlib:
# 테스트 파일을 sys.path 앞에 직접 삽입하는 기본 prepend 방식 대신
# Python importlib을 사용하여 각 테스트 파일을 고유한 경로로 불러온다.
#
# 다음처럼 서로 다른 디렉터리에 같은 파일명의 테스트가 있어도
# 모두 `test_chunk_search`라는 하나의 최상위 모듈로 충돌하지 않게 한다.
#
# - tests/unit/services/test_chunk_search.py
# - tests/unit/api/v1/endpoints/test_chunk_search.py
# - tests/integration/test_chunk_search.py
#
# 이 설정으로 Pytest의 `import file mismatch` 수집 오류를 방지한다.
addopts = "-ra -q --strict-config --strict-markers --import-mode=importlib"

# 인수 없이 `uv run pytest`를 실행했을 때
# 기본적으로 tests 디렉터리 아래의 테스트만 수집한다.
testpaths = ["tests"]

# 테스트 실행 중 jipsa_rag 패키지를 설치 경로와 관계없이
# RAG/src 디렉터리에서 가져올 수 있도록 Python 경로를 지정한다.
pythonpath = ["src"]

# 비동기 테스트에서 명시적으로 pytest.mark.asyncio를 사용하도록
# 엄격한 asyncio 모드를 적용한다.
#
# 다른 비동기 테스트 프레임워크와 이벤트 루프를 암묵적으로 공유하지 않아
# 테스트 간 이벤트 루프 상태가 섞이는 것을 방지한다.
asyncio_mode = "strict"

# 비동기 fixture가 각 테스트 함수마다 독립적인 이벤트 루프를 사용하도록
# fixture 이벤트 루프의 기본 범위를 function으로 제한한다.
asyncio_default_fixture_loop_scope = "function"

# 비동기 테스트 함수도 각각 독립적인 이벤트 루프를 사용하도록
# 테스트 이벤트 루프의 기본 범위를 function으로 제한한다.
asyncio_default_test_loop_scope = "function"


# =============================================================
# Ruff
# =============================================================
[tool.ruff]

# Python 3.12 문법과 표준 라이브러리를 기준으로 검사한다.
target-version = "py312"

# 코드 한 줄의 최대 길이를 100자로 제한한다.
line-length = 100

# 애플리케이션 소스와 테스트 코드를 모두 Ruff 검사 대상으로 지정한다.
src = ["src", "tests"]


[tool.ruff.lint]
select = [
    # 기본 Python 문법 오류 및 PEP 8 스타일 검사
    "E",
    "F",

    # import 순서와 그룹 정렬 검사
    "I",

    # 일반적으로 발생하기 쉬운 버그 패턴 검사
    "B",

    # 현재 Python 버전에서 사용할 수 있는 최신 문법 적용 검사
    "UP",

    # 불필요하거나 과도하게 복잡한 표현 단순화 검사
    "SIM",

    # Ruff가 제공하는 전용 품질 검사
    "RUF",
]


[tool.ruff.format]

# 문자열에는 기본적으로 큰따옴표를 사용한다.
quote-style = "double"

# 들여쓰기에는 공백을 사용한다.
indent-style = "space"

# 현재 운영체제와 Git 설정에 맞춰 줄바꿈 형식을 처리한다.
line-ending = "auto"


# =============================================================
# Mypy
# =============================================================
[tool.mypy]

# 프로젝트가 지원하는 Python 버전을 기준으로 타입을 검사한다.
python_version = "3.12"

# Pydantic 모델의 Field, validator 및 생성자 타입을
# Mypy가 정확하게 분석할 수 있도록 공식 플러그인을 적용한다.
plugins = ["pydantic.mypy"]

# jipsa_rag 패키지를 찾을 소스 루트를 지정한다.
mypy_path = "src"

# tests 아래의 여러 디렉터리에 같은 파일명이 존재하더라도
# 전체 디렉터리 경로를 기준으로 서로 다른 모듈로 인식하게 한다.
#
# 예:
# - tests.unit.services.test_chunk_search
# - tests.unit.api.v1.endpoints.test_chunk_search
# - tests.integration.test_chunk_search
#
# 이 설정은 Mypy의 `Duplicate module named` 오류를 방지한다.
# Pytest의 파일 수집 충돌은 위의 `--import-mode=importlib`이 처리한다.
explicit_package_bases = true

# Any 사용, 반환 타입 누락, Optional 오용 등 잠재적인 타입 문제를
# 가장 엄격한 수준으로 검사한다.
strict = true

# 존재하지만 실제로 적용되지 않는 Mypy 설정이 있으면 경고한다.
warn_unused_configs = true

# 오류 메시지에 오류 코드 예시를 함께 표시한다.
#
# 예:
# - [arg-type]
# - [return-value]
# - [assignment]
show_error_codes = true

# 터미널에서 오류 위치와 관련 코드를 읽기 쉽게 출력한다.
pretty = true